DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::Semaphore.
                    NEW VERSION: 1.1.30
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::CondVar.
                    NEW VERSION: 1.1.29
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::Mutex.
                    Introduced new exception types vpr::ResourceException and
                    vpr::LockException.
                    NEW VERSION: 1.1.28
2006-08-23 patrick  Fixed bugs in the NSPR socket classes related to timeouts
                    on blocking sockets when using the WINNT configuration of
                    NSPR.
                    NEW VERSION: 1.1.27
2006-08-10 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
                    NEW VERSION: 1.1.26
2006-08-03 dshipton Get rid of vpr-config and opt for flagpoll
                    NEW VERSION: 1.1.25
2006-07-12 patrick  Changed the DLL name to include the version as part of the
                    base library name on Windows. Implemented automatic
                    linking of the VPR library.
                    NEW VERSION: 1.1.24
2006-07-11 patrick  Link against the dynamic version of the Boost.Filesystem
                    library on Windows.
2006-06-25 patrick  Added support for building universal binaries on Mac OS X.
                    NEW VERSION: 1.1.23
2006-05-23 patrick  Applied versioning to the header and data directories.
                    NEW VERSION: 1.1.22
2006-05-23 patrick  Changed the static and shared library names to include the
                    VPR version as part of the base library name rather than
                    as part of the file extension.
                    NEW VERSION: 1.1.21
2006-05-12 allenb   Removed exception specifications from everything but
                    the exception classes.
                    NEW VERSION: 1.1.20