@@ -76,21 +76,74 @@ typedef vpr::Uint32 thread_id_t;
 class VPR_CLASS_API ThreadPosix : public BaseThread
 {
 public:  // ---- Thread CREATION and SPAWNING -----
-   /** Non-spawning constructor.  This will not start a thread. */
+   /** @name Constructors */
+   //@{
+   /**
+    * Non-spawning constructor.  This will not start a thread.
+    *
+    * @param priority  The priority for this thread. This parameter is
+    *                  optional and defaults to VPR_PRIORITY_NORMAL if not
+    *                  specified.
+    * @param scope     The scheduling scope of this thread. This parameter is
+    *                  optional and defaults to VPR_GLOBAL_THREAD if not
+    *                  specified.
+    * @param state     The joinable state of this thread. This parameter is
+    *                  optional and defaults to VPR_JOINABLE_THREAD if not
+    *                  specified.
+    * @param stackSize The default stack size for this thread. This parameter
+    *                  is optional and defaults to 0 (indicating that the
+    *                  default stack size should be used) if not specified.
+    *                  Note that this parameter is only honored on platforms
+    *                  that implement the stack size attribute for POSIX
+    *                  threads.
+    *
+    * @see start()
+    */
    ThreadPosix(VPRThreadPriority priority = VPR_PRIORITY_NORMAL,
                VPRThreadScope scope = VPR_GLOBAL_THREAD,
                VPRThreadState state = VPR_JOINABLE_THREAD,
                size_t stack_size = 0);
+   //@}
 
    /**
     * Spawning constructor with argument.  This will start a new thread that
     * will execute the specified function.
+    *
+    * @param func      The functor that will be executed by the spawned thread.
+    *                  This can be any callable that returns nothing and takes
+    *                  no parameters. The use of boost::bind() is recommended
+    *                  to adapt other callables to this signature.
+    * @param priority  The priority for this thread. This parameter is
+    *                  optional and defaults to VPR_PRIORITY_NORMAL if not
+    *                  specified.
+    * @param scope     The scheduling scope of this thread. This parameter is
+    *                  optional and defaults to VPR_GLOBAL_THREAD if not
+    *                  specified.
+    * @param state     The joinable state of this thread. This parameter is
+    *                  optional and defaults to VPR_JOINABLE_THREAD if not
+    *                  specified.
+    * @param stackSize The default stack size for this thread. This parameter
+    *                  is optional and defaults to 0 (indicating that the
+    *                  default stack size should be used) if not specified.
+    *                  Note that this parameter is only honored on platforms
+    *                  that implement the stack size attribute for POSIX
+    *                  threads.
+    *
+    * @throw vpr::IllegalArgumentException is thrown if an invalid attribute
+    *        is given to pthread_create(3) or if no functor has been set for
+    *        this thread object.
+    * @throw vpr::ResourceException is thrown if a thread could not be
+    *        allocated.
+    * @throw vpr::Exception is thrown if anything else went wrong during the
+    *        creation of the thread.
+    *
+    * @see start()
     */
    ThreadPosix(const vpr::thread_func_t& func,
                VPRThreadPriority priority = VPR_PRIORITY_NORMAL,
                VPRThreadScope scope = VPR_GLOBAL_THREAD,
                VPRThreadState state = VPR_JOINABLE_THREAD,
-               size_t stack_size = 0);
+               size_t stackSize = 0);
 
    /**
     * Destructor.
@@ -116,8 +169,16 @@ public:  // ---- Thread CREATION and SPAWNING -----
     *       executing our functor.  Depending on the scheduler, it may begin
     *       execution immediately, or it may block for a short time before
     *       beginning execution.
+    *
+    * @throw vpr::IllegalArgumentException is thrown if an invalid attribute
+    *        is given to pthread_create(3) or if no functor has been set for
+    *        this thread object.
+    * @throw vpr::ResourceException is thrown if a thread could not be
+    *        allocated.
+    * @throw vpr::Exception is thrown if anything else went wrong during the
+    *        creation of the thread.
     */
-   virtual vpr::ReturnStatus start();
+   virtual void start();
 
 protected:
    /**
@@ -128,10 +189,14 @@ protected:
     *       execution immediately, or it may block for a short time before
     *       beginning execution.
     *
-    * @return A vpr::ReturnStatus obj is returned to indicate the result of
-    *         the thread creation.
+    * @throw vpr::IllegalArgumentException is thrown if an invalid attribute
+    *        is given to pthread_create(3).
+    * @throw vpr::ResourceException is thrown if a thread could not be
+    *        allocated.
+    * @throw vpr::Exception is thrown if anything else went wrong during the
+    *        creation of the thread.
     */
-   vpr::ReturnStatus spawn();
+   void spawn();
 
    /**
     * Called by the spawn routine to start the user thread function.
